--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,18 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:4.0.1'
     implementation 'com.facebook.android:facebook-login:4.33.0'
     implementation("com.twitter.sdk.android:twitter-core:3.1.1") { transitive = true }
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
+    implementation('com.frosquivel:magicalcamera:5.0.5@aar') {
+        transitive = false;
+    }
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+
 }
 
 apply plugin: 'com.google.gms.google-services'
